<resources>
    <string name="app_name">WeatherForecast2025</string>
    <string name="nhietdo">Nhiệt độ</string>
    <string name="tocdogio">Tốc độ gió</string>
    <string name="tamnhin">Tầm nhìn</string>
    <string name="thoigian">Thời gian</string>
    <string name="kqNhietDo">Nhiet do</string>
    <string name="kqTocDoGio">toc do gio</string>
    <string name="kqTamNhin">tam nhin</string>
    <string name="kqThoiGian">thoi gian</string>
    <string name="appName">Weather Forecast 2025</string>
</resources>